<resources>
    <string name="app_name">MsEngage</string>
    <string name="sign_in">SIGN IN</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="text_first_time_here_sign_up">First time here?</string>
    <string name="image_back">back</string>
    <string name="text_sign_up">SIGN UP</string>
    <string name="text_we_just_need_a_few_more_details_to_get_your_account_ready">We just need a few more details to get your account ready</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_not_the_first_time_here">Not the first time here?</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="image_start_a_video_call">Start a video call</string>
    <string name="call">call</string>
    <string name="text_incoming_call">Incoming Call</string>
    <string name="image_accept_call">Accept Call</string>
    <string name="image_reject_call">Reject Call</string>
    <string name="text_outgoing_call">Outgoing Call</string>
    <string name="video_call">Video Calling...</string>
    <string name="incoming_video_call">Incoming video call...</string>
    <string name="incoming_audio_call">Incoming audio call...</string>
    <string name="Audio_calling">Audio calling...</string>
    <string name="One_to_one_video_call">Simply click on the video icon of the user you wish to call.</string>
    <string name="One_to_one_audio_call">Simply click on the audio icon of the user you wish to call.Your video will be disabled on starting the call.</string>
    <string name="Conference_call">To select multiple users long click on one of the users and then select all the users you wish to call. Next click the bottom right icon to start video call with the selected users.</string>
    <string name="welcome">WELCOME!</string>
    <string name="please_sign_in_to_continue">Please sign in to continue.</string>
    <string name="image_user_selected">User selected</string>
    <string name="chat">Chat</string>
    <string name="type_your_message">Type your message...</string>


</resources>